[build-system]
requires = ["setuptools>=61]
build-backend = "setuptools.build'_meta"

[project]
name = "tide"
version = "0.0.1"
description = "Reproduction of TIDE (CVPR 2025)"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line_length = 88


[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F, "I"]
